@@ -1,3 +1,12 @@
+2007-10-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
+	* flumotion/component/dvb/dvb.xml:
+	Move to using dvbbasebin instead of dvbsrc.
+	No longer required to specify pids property, just program
+	number is required.
+	This gives hardware CAM support for free,
+
 2007-10-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.py:
